syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.talentica.tweetsservicegrpc";

message TweetData {
	string id = 1;
	string text = 2;
	string authorId = 3;
	string createdAt = 4;
	string userName = 5;
	string userHandle = 6;
	string userLocation = 7;
	bool isVerified = 8;
	int32 followersCount = 9;
	int32 tweetCount = 10;
	double negativeScore = 11;
	double neutralScore = 12;
	double positiveScore = 13;
}

message SaveResponse {
	bool isSaved = 1;
}

service TweetsService {
	rpc saveTweet (TweetData) returns (SaveResponse);
	rpc saveTweets (stream TweetData) returns (stream SaveResponse);
}